--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <body>
         <div class="instagramwrapper">
             <div class="instagram-phone">
-                <img src="./img/instacel.png" alt="celular">
+                <img src="instacel.png" alt="celular">
             </div>
             <div class="instagram-continue">
                 <div class="group">
-                    <img src="./img/instalogo.png" class="instagram-logo" alt="instagram">
+                    <img src="instalogo.png" class="instagram-logo" alt="instagram">
                     <div class="profile-photo">
-                        <img src="./img/perfil.png" alt="perfil">
+                        <img src="perfil.png" alt="perfil">
                     </div>
                     <a href="#" class="instagram-login">Continue como Bad Boy</a>
                     <a href="#" class="instagram-logout">Remover conta</a>
