--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="instagramwrapper">
+        <div class="instagram-wrapper">
             <div class="instagram-phone">
                 <img src="instacel.png" alt="celular">
             </div>
@@ -21,7 +21,7 @@
                 </div>
                 <div class="group">
                     <p class="not-acount">Não é Bad Boy?</p>
-                    <p class="notacount">
+                    <p class="not-acount">
                         <span class="link-blue">Alternar Contas</span>
                         ou
                         <span class="link-blue">Inscreva-se</span>
