--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p class="not-acount">
                         <span class="link-blue">Alternar Contas</span>
                         ou
-                        <span class="link-blue">Inscreva-se</span>
+                        <span class="link-blue">Inscreva-se!</span>
                     </p>
                 </div>
                 <div class="get-the-app">
